fix ipad nav wrap

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,8 +9,8 @@ body    {background: #fcfcfc}  /* kbase: #F7F8F9; f8f9fa*/
 a {color: #9b1b3a}
 
 .navbar {background: #434344; margin-bottom: 2rem}
-.navbar-expand-md .navbar-nav .nav-link {color: white; padding-left: 0; padding-right: 0 /* do this on nav-item instead but not the first ... */}
-.navbar-expand-md .navbar-nav .nav-item  {padding-left: 1rem; padding-right: 1rem; }
+.navbar-expand-md .navbar-nav .nav-link {font-size: 95%  /*new*/; color: white; padding-left: 0; padding-right: 0 /* do this on nav-item instead but not the first ... */}
+.navbar-expand-md .navbar-nav .nav-item  {padding-left: 1rem; padding-right: 0.8rem /*new*/; }
 .navbar-expand-md .navbar-nav .nav-item:first-child {padding-left: 0; }
 
 
@@ -229,8 +229,12 @@ h2.news            {margin-top:0; font-size: 1.6rem; font-weight: 200; font-styl
   .quotesource      {font-size: 0.9em; font-style: normal;}
 }
 
+@media (min-width: 992px) {
+  .navbar-expand-md .navbar-nav .nav-link  {font-size: 100% /*new*/;}
+  .navbar-expand-md .navbar-nav .nav-item  {padding-right: 1rem /*new*/; }
+}
 
-@media (min-width: 1201px) {
+@media (min-width: 1200px) {
   .card            {width: 22rem; margin-right: 3rem;}
   .homegrid .card  {width: 100%; margin-right: 0;}
   h2               {margin-top: 1.5em}
